<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CONi: Connecting Families</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="lastname">Last Name</string>
    <string name="firstname">First Name</string>
    <string name="midname">Middle Name</string>
    <string name="age">Age</string>
    <string name="birthdate">Birthdate</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="contactno">Contact Number</string>
    <string name="email">Email Address</string>
    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="Username">Username</string>
    <string name="Deviceno">Input Device Number</string>
    <string name="termsofcon">By using the application and device, you accept and agree with our Privacy Policy and Terms of Use.</string>
    <string name="childimg">Upload Photo or Take a Photo</string>
    <string name="register">Register</string>
    <string name="takephoto">Take a Photo</string>
    <string name="opengallery">Choose from Gallery</string>
    <string name="acctset">Account Settings</string>
    <string name="logout">Log Out</string>

    <string name="action_ok">OK</string>
    <string name="permission_alert_dialog_title">Requesting SMS Permission</string>
    <string name="permission_dialog_message">By clicking OK, CONi will be allowed to read incoming SMS from the Child Device solely for alert and safety purposes.</string>
    <string name="my_family">My Family</string>
    <string name="add_boundary">Add Boundary</string>
    <string name="refreshmap">Clear Map Data</string>

</resources>