<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Guardianreg"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/coniplain">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="500dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <!-- Add CONi icon here -->


            <EditText
                android:id="@+id/editlastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:ems="10"
                android:hint="@string/lastname"
                android:inputType="textPersonName" />



            <EditText
                android:id="@+id/editfirstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:ems="10"
                android:hint="@string/firstname"
                android:inputType="textPersonName"
                />

            <EditText
                android:id="@+id/editmidname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:ems="10"
                android:hint="@string/midname"
                android:inputType="textPersonName" />


            <EditText
                android:id="@+id/editage"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="10sp"
                android:ems="10"
                android:hint="@string/age"
                android:inputType="number"

                />

            <TextView
                android:id="@+id/txtbday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginLeft="18dp"
                android:layout_marginBottom="15dp"
                android:ems="10"
                android:hint="@string/birthdate"
                android:textSize="20dp" />
            <!--android:inputType="date"-->


            <!--<RelativeLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content">-->
            <!--<LinearLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal">-->
            <RadioGroup
                android:id="@+id/rdbgroupgender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <RadioButton
                    android:id="@+id/rdmale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:ems="10"
                    android:text="@string/radio_male" />
                <RadioButton
                    android:id="@+id/rdfem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@string/radio_female"/>

            </RadioGroup>

            <!--</LinearLayout>-->
            <!--</RelativeLayout>-->
            <EditText
                android:id="@+id/editcontactnumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:ems="10"
                android:hint="@string/contactno"
                android:inputType="phone"
                />

            <EditText
                android:id="@+id/editemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/editusername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/editconfirmpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/confirmpass"
                android:inputType="textPassword"/>




        </LinearLayout>

    </ScrollView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">


        <Button
            android:id="@+id/btn_signup"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/color3"
            android:text="@string/signup"
            />
    </LinearLayout>


</LinearLayout>