<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChildRegistration"
    android:background="@drawable/coniplain">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:orientation="vertical"
            android:layout_alignParentTop="true">
            <!-- Add CONi icon here -->


            <ImageView
                android:id="@+id/imgchild"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/childimg"
                android:layout_marginTop="20dp"
                android:src="@drawable/baseline_add_a_photo_black_18dp"
                android:padding="10dp"
                android:scaleType="fitXY"
                android:background="@drawable/imageview_button"/>
            <EditText
                android:id="@+id/editclastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:ems="10"
                android:hint="@string/lastname"
                android:inputType="textPersonName" />


            <EditText
                android:id="@+id/editcfirstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:ems="10"
                android:hint="@string/firstname"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editcmidname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:ems="10"
                android:hint="@string/midname"
                android:inputType="textPersonName" />


            <EditText
                android:id="@+id/editcage"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="5sp"
                android:ems="10"
                android:hint="@string/age"
                android:maxLength="2"
                android:inputType="number"

                />

            <TextView
                android:id="@+id/txtcbday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="15dp"
                android:ems="8"
                android:hint="@string/birthdate"
                android:textSize="20dp" />


            <RadioGroup
                android:id="@+id/rdbcgender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <RadioButton
                    android:id="@+id/rdcmale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:ems="10"
                    android:text="@string/radio_male" />

                <RadioButton
                    android:id="@+id/rdcfem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@string/radio_female" />

            </RadioGroup>



            <EditText
                android:id="@+id/editdeviceno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:ems="10"
                android:hint="@string/Deviceno"
                android:inputType="text" />

            <RadioGroup
                android:id="@+id/rdbTermsCon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

            <RadioButton
                android:id="@+id/rdTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:ems="20"
                android:text="@string/termsofcon"
                android:layout_marginTop="20dp"
                android:layoutDirection="ltr"/>

            </RadioGroup>

            <Button
                android:id="@+id/btn_reg"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_effect"
                android:text="@string/register"
                android:textColor="@color/color4"
                android:layout_marginBottom="20dp"
                android:textSize="20sp" />


        </LinearLayout>

    </ScrollView>


</LinearLayout>